samples/_failures_safe/1761335580_d0d9bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc128758.c: In function ‘main’:
./samples/SAFE/__tmp_bc128758.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     Lexer
      |     ^~~~~
./samples/SAFE/__tmp_bc128758.c:166:5: error: expected declaration or statement at end of input
